--- a/force-app/main/default/classes/RSACalloutHandler_test.cls
+++ b/force-app/main/default/classes/RSACalloutHandler_test.cls
@@ -1,6 +1,7 @@
 @istest
 public class RSACalloutHandler_test {
-   @istest
+    
+    @istest
     public static Id getchasisnumbertestforstatusvehicleallocation() {
         List<Order> ordlist = new List<Order>(); 
         
@@ -23,7 +24,7 @@ public class RSACalloutHandler_test {
         Product2 p = new Product2();
         p.ProductCode = 'testpro';
         p.Name = 'test';
-       // p.Name = 'Road Side Assistance';
+        p.Name = 'Road Side Assistance';
         p.Type__c = 'Accessories';
         p.HSN_Code__c = '00000000';
         insert p; 
@@ -38,17 +39,7 @@ public class RSACalloutHandler_test {
         Software_Version__c sv = new Software_Version__c();
         insert sv;
         
-       /* Vehicle v = new Vehicle();
-        v.Name = 'test';
-        v.VehicleIdentificationNumber = 'Test00001223';
-        v.VehicleDefinitionId = vd.Id;
-        v.Charger_PC_Number__c = '000000000';
-        v.Software_Version__c = sv.Id;
-        v.PDI_Status_Pass__c = true;
-        v.AssetId = a.Id;
-        insert v;*/
-        
-         Vehicle v = new Vehicle();
+        Vehicle v = new Vehicle();
         v.Name = 'test';
         v.VehicleIdentificationNumber = 'Test00001223';
         v.VehicleDefinitionId = vd.Id;
@@ -75,9 +66,9 @@ public class RSACalloutHandler_test {
         o.Assigned_Vehicle__c = v.Id;
         insert o; 
         
-         
         
-         
+        
+        
         
         list<Pricebook2> standardPricebook = [SELECT Id,IsStandard,IsActive FROM Pricebook2];
         Id standardPricebookcostumproduct;
@@ -108,7 +99,7 @@ public class RSACalloutHandler_test {
                 
             }
         }
-       
+        
         
         
         
@@ -121,10 +112,6 @@ public class RSACalloutHandler_test {
     public static void getchasisnumbertestforstatusvehicleallocationtest() {
         Id orderid = RSACalloutHandler_test.getchasisnumbertestforstatusvehicleallocation();
         Order ord = [SELECT Id, Status,RSA_Active__c FROM Order WHERE Id = :orderid];
-        //added 
-       
-        //added
-        //OrderItem orderItem = [SELECT Id FROM OrderItem WHERE OrderId = :ord.Id LIMIT 1];//added now
         
         ord.Status = 'Ready For Delivery';
         ord.RSA_Active__c=true;
@@ -142,24 +129,19 @@ public class RSACalloutHandler_test {
         Id orderid = RSACalloutHandler_test.getchasisnumbertestforstatusvehicleallocation();
         Order ord = [SELECT Id, Status,RSA_Active__c FROM Order WHERE Id = :orderid];
         
-        // OrderItem orderItem = [SELECT Id FROM OrderItem WHERE OrderId = :ord.Id LIMIT 1];//added now
-        
         ord.Status = 'Payment Pending';
         ord.RSA_Active__c = true;
         ord.Payment_Status__c = 'Completed';
         update ord;
         Test.setMock(HttpCalloutMock.class, new RSACalloutMock());
-        
-        
-        
-        
-        
     }
     
     //test class method Added by Aniket on 16/01/2025
     @isTest
     public static void testGetChasisNumberWithoutVehicleOrder() {
         
+        Account acc = new Account(Name = 'Test Account');
+        insert acc;
         
         Id orderId = RSACalloutHandler_test.getchasisnumbertestforstatusvehicleallocation();//getchasisnumberWihtoutVehicleOrder
         
@@ -167,25 +149,19 @@ public class RSACalloutHandler_test {
                                                    Invoice_date__c=System.Today());
         insert oi;
         
-        
-          
-
-
-        
-        
         Order order = [SELECT Id, Status, RSA_Active__c FROM Order WHERE Id = :orderId];
-        
-       
-        
-        
-        
         order.Status = 'RTO Registration';
         order.RSA_Active__c = false;
         update order;
         
-        
-        
-        
+        WhatsappIntegration__c mockIntegration = new WhatsappIntegration__c(
+            Name = 'WhatsApp API',
+            API_Endpoint__c = 'https://api.whatsapp.com/send',
+            API_Key__c = 'mock-api-key',
+            order_cancelled__c='example.jpg',
+            fullpayment_done__c='examplePayment.jpg'
+        );
+        insert mockIntegration;
         
         //Test.setMock(HttpCalloutMock.class, new RSACalloutMock());
         
@@ -195,7 +171,115 @@ public class RSACalloutHandler_test {
         
         Test.stopTest();
         
-        
     }
+    
+    @IsTest
+    public static void handleGetChassisNumber() {
+        Account acc = new Account(Name = 'Test Account');
+        insert acc;
+        
+        Contact con = new Contact();
+        con.LastName = 'Test';
+        con.AccountId = acc.Id;
+        con.Phone = '0000000000';
+        insert con;
+        
+        Asset a = new Asset();
+        a.Name = 'Test Asset';
+        a.ContactId = con.Id;
+        a.AccountId = acc.Id;
+        insert a;
+        
+        Product2 objProduct = new Product2();
+        objProduct.Name = 'Road Side Assistance';
+        objProduct.Description = 'Test Product';
+        
+        objProduct.StockKeepingUnit = 'testing';
+        objProduct.IsActive = true;
+        objProduct.ProductCode = '456c';
+        objProduct.HSN_Code__c = '1';
+        objProduct.Type__c = 'Accessories';
+        insert objProduct;
+        
+        Id pricebookId = Test.getStandardPricebookId();
+        
+        Pricebook2 standardPricebook = new Pricebook2(
+            Id = pricebookId,
+            IsActive = true
+        );
+        update standardPricebook;
+        
+        Pricebook2 customPricebook = new Pricebook2(
+            Name = 'Custom Price Book',
+            IsActive = true
+        );
+        insert customPricebook;
+        
+        PricebookEntry standardPBEntry = new PricebookEntry();
+        standardPBEntry.Pricebook2Id = standardPricebook.Id;
+        standardPBEntry.Product2Id = objProduct.Id;
+        standardPBEntry.UnitPrice = 500;
+        standardPBEntry.IsActive = true;
+        insert standardPBEntry;
+        
+        PricebookEntry customPBEntry = new PricebookEntry();
+        customPBEntry.Pricebook2Id = customPricebook.Id;
+        customPBEntry.Product2Id = objProduct.Id;
+        customPBEntry.UnitPrice = 500;
+        customPBEntry.IsActive = true;
+        insert customPBEntry;
+        
+        VehicleDefinition vd = new VehicleDefinition();
+        vd.Name = 'VehicleDefinitionTest';
+        vd.ProductId = objProduct.Id;
+        insert vd;
+        
+        Software_Version__c sv = new Software_Version__c();
+        insert sv;
+        
+        Vehicle v = new Vehicle();
+        v.Name = 'Test Vehicle';
+        v.VehicleIdentificationNumber = 'Test00001223';
+        v.VehicleDefinitionId = vd.Id;
+        v.Charger_PC_Number__c = '000000000';
+        v.Software_Version__c = sv.Id;
+        v.PDI_Status_Pass__c = true;
+        v.AssetId = a.Id;
+        v.CurrentOwnerId = acc.Id;
+        v.RSA_Activation__c = false;
+        v.VehicleRegistrationNumber ='DFGH';
+        v.ChassisNumber = 'DFGHJKL';
+        insert v;
+        
+        Order odr = new Order();
+        odr.Name = 'Test Order';
+        odr.Assigned_Vehicle__c = v.Id;
+        odr.Status = 'RTO Registration';
+        odr.AccountId = acc.Id;
+        odr.EffectiveDate = System.Today();
+        odr.Pricebook2Id = standardPricebook.Id;
+        insert odr;
+        
+        OrderItem oi = new OrderItem();
+        oi.OrderId = odr.Id;
+        oi.PricebookEntryId = standardPBEntry.Id;
+        oi.Quantity = 1;
+        oi.UnitPrice = 500;
+        insert oi;
+        
+        System.debug('Order ID: ' + odr.Id);
+        
+        Test.startTest();
+        odr.Status = 'Vehicle Delivered';
+        odr.Assigned_Vehicle__c = v.Id;
+        odr.Payment_Status__c = 'Completed';
+        update odr;
+        RSACalloutHandler.addTest();
+        RSACalloutHandler.addTest1();
+        RSACalloutHandler.addTest2();
+        RSACalloutHandler.addTest3();        
+        Test.stopTest();
+    }
+    
     
 }
